# emotion-recognition

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fer.cpp  fer.h  fer_predict.cpp  fer_train.cpp  gather.cpp  main.cpp  train_CK.cpp  train_jaffe.cpp  zhumingde.xml
